refactor: optimize file upload handling with improved input stream management and chunk processing